--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,12 @@ ul {
   margin: 1rem 0;
   padding: 0;
 }
-
+/*Klasse "done" in "li" erstellen*/
 li {
   margin: 1rem 0;
   padding: 1rem;
   border: 1px solid #ccc;
+  &.done {
+    text-decoration: line-through;
+  }
 }
